--- a/src/Talabi.Api/Resources/OrderResources.en.resx
+++ b/src/Talabi.Api/Resources/OrderResources.en.resx
@@ -111,11 +111,20 @@
   <data name="OrderItemCancellationFailed" xml:space="preserve">
     <value>An error occurred while cancelling the order item</value>
   </data>
+  <data name="AddressNotFound" xml:space="preserve">
+    <value>Delivery address not found</value>
+  </data>
   <data name="OutOfDeliveryRadius" xml:space="preserve">
     <value>Sorry, you are outside of this restaurant's delivery area.</value>
   </data>
   <data name="MinimumOrderAmountNotMet" xml:space="preserve">
     <value>The minimum order amount of ₺{0} has not been met.</value>
+  </data>
+  <data name="VendorLocationNotAvailable" xml:space="preserve">
+    <value>Vendor location information is not available</value>
+  </data>
+  <data name="AddressLocationNotAvailable" xml:space="preserve">
+    <value>Delivery address location information is not available</value>
   </data>
   
   <!-- Success Messages -->
@@ -139,6 +148,9 @@
   </data>
   <data name="OrderItemCancelledSuccessfully" xml:space="preserve">
     <value>Order item cancelled successfully</value>
+  </data>
+  <data name="OrderCalculatedSuccessfully" xml:space="preserve">
+    <value>Order calculated successfully</value>
   </data>
   
   <!-- Notification Messages -->
