feat : product details and search updated and localizations updated

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "ar",
+  "checkSearchHistory": "ما الذي تبحث عنه؟",
+  "@checkSearchHistory": {
+    "description": "Prompt to check search history when no results/query"
+  },
   "myWallet": "محفظتي",
   "@myWallet": {
     "description": "My Wallet title"
