--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "tr",
+  "checkSearchHistory": "Ne aramak istersiniz?",
+  "@checkSearchHistory": {
+    "description": "Prompt to check search history when no results/query"
+  },
   "myWallet": "Cüzdanım",
   "@myWallet": {
     "description": "My Wallet title"
