refactor: Remove obsolete documentation files related to critical test scenarios, Postman test scenarios, and search request examples to streamline project structure and improve maintainability

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -621,6 +621,10 @@
   "@registerFailed": {
     "description": "فشل التسجيل"
   },
+  "sessionExpired": "انتهت صلاحية جلستك. يرجى تسجيل الدخول مرة أخرى.",
+  "@sessionExpired": {
+    "description": "Session expired message shown when token is invalid/expired"
+  },
   "membershipAgreement": "اتفاقية العضوية",
   "@membershipAgreement": {
     "description": "اتفاقية العضوية"
