feat: Implement UI and logic to handle expired email verification codes, including a resend option and new localization strings.

--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "en",
+  "verificationCodeExpired": "Verification code has expired. Please request a new code.",
   "checkSearchHistory": "What are you looking for?",
   "@checkSearchHistory": {
     "description": "Prompt to check search history when no results/query"
