--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "tr",
+  "verificationCodeExpired": "Doğrulama kodunun süresi doldu. Lütfen yeni kod isteyin.",
   "checkSearchHistory": "Ne aramak istersiniz?",
   "@checkSearchHistory": {
     "description": "Prompt to check search history when no results/query"
