feat: Implement wallet, authentication, and order management features, and add multi-language localization.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -613,7 +613,7 @@
   "@fullNameRequired": {
     "description": "الاسم الكامل مطلوب"
   },
-  "loginFailed": "فشل تسجيل الدخول",
+  "loginFailed": "عنوان البريد الإلكتروني أو كلمة المرور غير صالحة",
   "@loginFailed": {
     "description": "فشل تسجيل الدخول"
   },
