--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -613,7 +613,7 @@
   "@fullNameRequired": {
     "description": "Full name is required"
   },
-  "loginFailed": "Login failed",
+  "loginFailed": "Invalid email address or password",
   "@loginFailed": {
     "description": "Login failed"
   },
